README improved